--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.18.2",
     "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.2",
+    "nodemailer": "^4.4.2",
     "promise": "^8.0.1",
     "restify": "^6.3.4",
     "restify-plugins": "^1.6.0",
